src/lib/snapshots/cviz__snapshot_tests__tests__chain_plus_utility_ascii_all_interfaces.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 143
expression: "ascii_snap(&chain_plus_utility_graph(), DetailLevel::AllInterfaces, false)"
---
┌──────────────────┐
│   Host Imports   │
├──────────────────┤
│  {handler}       │
│  {log}           │
└──────────────────┘
┌─────────────────────────┐
│   Component Instances   │
├─────────────────────────┤
│  [srv]                  │
│  [middleware]           │
│  [logger]               │
└─────────────────────────┘
┌────────────────────────────────────────┐
│              Connections               │
├────────────────────────────────────────┤
│  {handler} --- handler --- [srv]       │
│  [srv] ── handler ──> [middleware]     │
│  {log} --- log --- [logger]            │
│  [middleware] ──> (Export: handler)    │
└────────────────────────────────────────┘
