src/lib/snapshots/cviz__snapshot_tests__tests__chain_plus_utility_ascii_chain_only.snap
---
source: src/lib/snapshot_tests.rs
expression: "ascii_snap(&chain_plus_utility_graph(), &chain_only(), false)"
---
╞══ handler ════════════════════════════════════════

                ┌────────────┐             ┌─────┐
 ext:handler ──▶│ middleware │───handler──▶│ srv │
                └────────────┘             └─────┘
