src/lib/snapshots/cviz__snapshot_tests__tests__chain_plus_utility_ascii_default.snap
---
source: src/lib/snapshot_tests.rs
expression: "ascii_snap(&chain_plus_utility_graph(), &GraphRenderOpts::default(), false)"
---
╞══ handler ════════════════════════════════════════

                ┌────────────┐             ┌─────┐
 ext:handler ──▶│ middleware │───handler──▶│ srv │
                └────────────┘             └─────┘
