src/lib/snapshots/cviz__snapshot_tests__tests__chain_plus_utility_mermaid_chain_only.snap
---
source: src/lib/snapshot_tests.rs
expression: "mermaid_snap(&chain_plus_utility_graph(), &chain_only(), false)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    classDef shared stroke-width:3px,stroke-dasharray:5 3

    subgraph sg_wasi_http_handler_0_3_0["export: handler"]
        n1["srv"]
        n2["middleware"]
        ext_wasi_http_handler_0_3_0(["ext: handler"]) --> n2
        n2 -->|"handler"| n1
    end
