src/lib/snapshots/cviz__snapshot_tests__tests__chain_plus_utility_mermaid_full.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 231
expression: "mermaid_snap(&chain_plus_utility_graph(), DetailLevel::Full, false)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    subgraph all["All Instances"]
        srv["srv [comp:0]"]
        middleware["middleware [comp:1]"]
        logger["logger [comp:2]"]
    end

    srv -->|"wasi:http/handler@0.3.0"| middleware

    middleware --> export_wasi_http_handler_0_3_0(["Export: wasi:http/handler@0.3.0"])
