src/lib/snapshots/cviz__snapshot_tests__tests__chain_plus_utility_mermaid_handler_chain.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 213
expression: "mermaid_snap(&chain_plus_utility_graph(), DetailLevel::HandlerChain, false)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    subgraph composition["Service Chains"]
        middleware["middleware"]
        srv["srv"]
    end

    export_wasi_http_handler_0_3_0(["Export: handler"]) --> middleware
    middleware -->|"handler"| srv
